PyMaker/datas/object2/RawHTML/i8201/Python_DOC_referPages.cant-determine-cause-of-syntaxerror-invalid-character-in-identifier.txt
<div class="post-text" itemprop="text">
<p>I am attempting to use Brickman to use Python coding on a LEGO EV3. When I try to run my code I get the following error</p>
<pre class="lang-none prettyprint-override"><code>&gt;&gt;robot@ev3dev:~$ python3 CoffeePi_Test/Main.py
File "CoffeePi_Test/Main.py", line 14
  tags=[‘coffeepi’]
                 ^
  SyntaxError: invalid character in identifier
</code></pre>
<p>Here is my code. I am not sure what is triggering this error.</p>
<pre><code> #!/usr/bin/env python3
#Import the necessary methods from tweepy library
from tweepy.streaming import StreamListener
from tweepy import OAuthHandler
from tweepy import Stream
import json
import time
import vending

import ev3dev.ev3 as ev3
from ev3dev.auto import *


tags=[legovend]
words=[]
#Variables that contains the user credentials to access Twitter API
#Two versions, redudancy if the first fails...
access_token = # redacted
access_token_secret = # redacted
consumer_key = # redacted
consumer_secret = # redacted

access_token2 = # redacted
access_token_secret2 = # redacted
consumer_key2 = # redacted
consumer_secret2 = # redacted


#This is a basic listener that just prints received tweets to stdout.
class StdOutListener(StreamListener):

    def on_data(self, data):
        global mA,mB,home,cs, lastVend
        try:
            tweet = json.loads(data)
            tw
        except:
            pass

        if tags:
            if all(tag in tweet['text'].lower() for tag in tags):
                print (tweet['user']['screen_name'], ' - ', tweet['text'])

                if int(tweet['timestamp_ms'])&gt;lastVend:
                    ev3.Leds.set_color(ev3.Leds.LEFT, ev3.Leds.RED)
                    ev3.Leds.set_color(ev3.Leds.RIGHT, ev3.Leds.RED)

                    vending.onTweet(mA, mB, cs, home)

                    time.sleep(2)
                    lastVend = int(round(time.time() * 1000))+1000
                    ev3.Leds.set_color(ev3.Leds.LEFT, ev3.Leds.GREEN)
                    ev3.Leds.set_color(ev3.Leds.RIGHT, ev3.Leds.GREEN)
        return True

    def on_error(self, status):
        print( status)
        return False


if __name__ == '__main__':

    #This handles Twitter authetification and the connection to Twitter Streaming API
    print( 'here')
    global mA,mB,home,cs, lastVend
    mA = ev3.MediumMotor('outA')
    mB = ev3.MediumMotor('outB')
    home = mA.position - 40
    cs=ColorSensor()
    lastVend = int(round(time.time() * 1000))

    l = StdOutListener()
    auth = OAuthHandler(consumer_key, consumer_secret)
    auth.set_access_token(access_token, access_token_secret)
    stream = Stream(auth, l)

    auth2 = OAuthHandler(consumer_key2, consumer_secret2)
    auth2.set_access_token(access_token2, access_token_secret2)
    stream2 = Stream(auth2, l)

    try:

        Sound.speak('Ready to go').wait()
        print ('trying 1')
        stream.filter(track=tags)
        print('trying 2')
        stream2.filter(track=tags)
        Sound.speak('Could not connect').wait()
    except Exception as e:
        print( e)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Humor is usually not welcome on stackoverflow, but there are exceptions from this rule so let's this answer be such exception. </p>
<p>But let's go back to answering the actual question: </p>
<blockquote>
<p><code>Can't determine cause of SyntaxError: invalid character in identifier</code></p>
<p><code>I am not sure what is triggering this error.</code></p>
</blockquote>
<p>I have to admit that I write this fully correct answer with a chuckle :) :</p>
<blockquote>
<p><strong>The cause of the SyntaxError is an invalid character in identifier.</strong></p>
</blockquote>
<p>The invalid character in the identifier is the character: </p>
<p>[ <strong>’</strong> ]</p>
<p>U+2019  ’   e2 80 99    RIGHT SINGLE QUOTATION MARK</p>
<p>Here Python code with which you can find out for yourself details about the "character" which is causing the trouble: </p>
<pre><code>#!/usr/bin/ python3
# -*- coding: &lt;utf8&gt; -*-
# tags=[’coffeepi’]
coffeepi = "’"
print(ord(coffeepi), hex(ord(coffeepi)), bin(ord(coffeepi))) 
</code></pre>
<p>what prints: </p>
<blockquote>
<p>8217, <strong>0x2019</strong> , 0b10000000011001</p>
</blockquote>
<p>Check out this here </p>
<p><a href="http://www.utf8-chartable.de/unicode-utf8-table.pl" rel="nofollow noreferrer">http://www.utf8-chartable.de/unicode-utf8-table.pl</a>
where I have got the information about the character from, and this here 
<a href="https://docs.python.org/3/reference/lexical_analysis.html#identifiers" rel="nofollow noreferrer">https://docs.python.org/3/reference/lexical_analysis.html#identifiers</a>
for more detailed information about which characters are allowed in an indentifier, because not all are and apparently this one does not belong to the range of allowed characters. </p>
<p>By the way: this "character" is NOT a one byte character like it is for ASCII characters. How this character is encoded in UTF-8 is specified in the Unicode table (e2 80 99). </p>
<p>AND ... in the entire code you have provided in the question there is no trace of what you have specified to cause the error message. </p>
<p>How you can fix that?</p>
<blockquote>
<p><strong>Just replace these strange quotes with standard quotes " "</strong></p>
</blockquote>
<p>ADDENDUM: The strange quotes should be probably standard quotes around a string with a word put into the list. As the Python interpreter is running into this strange quotes it assumes they are part of a variable name (identifier) and not part of a string specification. That is the reason for the confusing error message as you don't see from the code at the first glance WHY the Python interpreter thinks it deals with an variable name (identifier) and not a quoted section of text which should be turned into a Python string. </p>
</div>
<span class="comment-copy">That error message doesn't seem to refer to the actual code you posted</span>
<span class="comment-copy">I tried to fix up and sync some code but now I get this error  File "CoffeePi_Test/Main.py", line 14 SyntaxError: Non-ASCII character '\xe2' in file CoffeePi_Test/Main.py on line 14, but no encoding declared; see <a href="http://python.org/dev/peps/pep-0263/" rel="nofollow noreferrer">python.org/dev/peps/pep-0263</a> for details</span>
<span class="comment-copy">You posted your tokens in your code. You should go and delete those tokens now and issue new ones before someone or somebot spams the universe with your tokens....</span>
<span class="comment-copy">OOPS! Looks like they have been hidden. I will not do that again!</span>
<span class="comment-copy">They are still in the edit history. I just read them now. Delete them and create new ones.</span>
